--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "types": ["cypress", "node", "cypress-xpath"],
       "esModuleInterop": true,
       "typeRoots": ["node_modules/@types"],
+      "baseUrl": "./",
       "noImplicitAny": false
     },
     "include": [
