--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "@types/node": "^18.7.23",
     "cypress": "^10.11.0",
     "cypress-cucumber-preprocessor": "^4.3.0",
-    "cypress-plugin-snapshots": "^1.4.4",
     "cypress-xpath": "^1.6.2",
     "multiple-cucumber-html-reporter": "^1.21.4",
-    "typescript": "^4.4.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "typescript": "^4.4.4"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true,
