--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "cypress-cucumber-preprocessor": "^4.3.0",
     "cypress-xpath": "^1.6.2",
     "multiple-cucumber-html-reporter": "^1.21.4",
-    "xlsx": "^0.18.5",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "xlsx": "^0.18.5"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true,
